--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "pasiri",
-  "version": "0.0.1",
-  "description": "Flexible request agent.",
+  "version": "1.0.0",
+  "description": "Flexible request agent. Includes HTTP request mock.",
   "keywords": [
     "request",
     "http",
+    "mock",
     "mockup",
     "front-end",
     "web"
@@ -13,6 +14,9 @@
   "license": "MIT",
   "main": "./lib/pasiri.js",
   "files": [
+    "lib",
+    "dist",
+    "gulpfile.js",
     "LICENSE.txt"
   ],
   "scripts": {
@@ -27,6 +31,7 @@
   },
   "dependencies": {
     "core-js": "^1.1.4",
+    "qs": "^5.1.0",
     "whatwg-fetch": "^0.9.0"
   },
   "devDependencies": {
